<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_header_selector"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="16dp"
            android:text="@string/first_name"
            android:layout_alignLeft="@id/editTextFirstName"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="179dp"
            android:layout_height="51dp"
            android:layout_marginTop="275dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="16dp"
            android:layout_alignLeft="@id/editTextLastName"
            android:text="@string/last_name"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="179dp"
            android:layout_height="51dp"
            android:layout_marginTop="375dp"
            android:layout_centerHorizontal="true"
             />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="179dp"
            android:layout_height="51dp"
            android:layout_marginTop="475dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editTextWeight"
            android:layout_marginTop="450dp"
            android:gravity="center"
            android:text="@string/enter_weight"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="550dp"
            android:layout_centerHorizontal="true"
            android:background="#2E54A5"
            android:padding="15dp"
            android:text="@string/start"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/ImageViewNewUser"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:src="@drawable/add_user"
            app:srcCompat="@drawable/user" />


    </RelativeLayout>
</ScrollView>