<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_header_selector"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/main_view"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_amount"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="120dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="25dp"
                android:width="300dp"
                android:text="@string/defaultValue"
                android:textSize="80sp"
                android:id="@+id/waterPercentage"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/litres"
                android:layout_gravity="center"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/waterAmount"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:text="0"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnAddWater"
                android:layout_width="184dp"
                android:layout_height="64dp"
                android:text="@string/add_drink"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="#2E54A5"
                android:onClick="addDrink" />


        <LinearLayout
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp">

            <ImageButton
                android:id="@+id/mapIcon"
                android:layout_width="85dp"
                android:layout_height="104dp"
                android:background="@null"
                android:src="@drawable/map_icon" />

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="85dp"
                android:layout_height="104dp"
                android:layout_marginLeft="30dp"
                android:background="@null"
                android:onClick="logOut"
                android:src="@drawable/settings"
                android:contentDescription="TODO"/>

        </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>